--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,12 +7,11 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: monospace;
+    font-family: Roboto;
 }
 
 body{
     text-align: center;
     background: black;
 }
-
 
