--- a/assets/css/substyles.css/header.css
+++ b/assets/css/substyles.css/header.css
@@ -1,29 +1,50 @@
 .header-publicacion{
     height: 60px;
-    
+    display: flex;
+    justify-content: space-between;
+
 }
-.profile-ig{
+
+.to-izquierda{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    margin-left: 5px;
+
+}
+.to-derecha{
+    display: flex;
+    text-align: center;
+    align-items: center;
+}
+
+.contenedor-profile-ig{
+    display: flex;
     position: relative;
-    float:left;
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    border: solid rgb(255, 0, 255) 2px;
-    margin-left: 10px;
-    margin-top: 2.5px;
+    background: linear-gradient(to right, rgb(194, 0, 194),orange);
+    align-items: center;
+    justify-content: center;
+    padding: 3px;
 }
 
-.icono-opciones{
-    float: right;
-    font-size: 40px;
-    margin-right: 15px;
-    margin-top: 10px;
+.profile-ig{
+    position: relative;
+    width: 100%;
+    border-radius: 50%;
 }
+
 .username{
     position: relative;
-    float: left;
-    margin-top: 20px;
     margin-left: 5px;
     font-weight: bold;
     font-size: 15px;
 }
+
+.icono-opciones{
+    font-size: 40px;
+    margin-right: 15px;
+}
+
