--- a/assets/css/substyles.css/header.css
+++ b/assets/css/substyles.css/header.css
@@ -1,5 +1,6 @@
 .header-publicacion{
-    height: 60px;
+    height: auto;
+    margin: 5px;
     display: flex;
     justify-content: space-between;
 
