--- a/assets/css/substyles.css/likes.css
+++ b/assets/css/substyles.css/likes.css
@@ -1,7 +1,13 @@
+.footer-post{
+    display: flex;
+    flex-direction: column;
+}
 .quienes-dieron-like{
     position: relative;
+    display: flex;
+    justify-content: start;
     margin-top: 10px;
-    height: 30px;
+    margin-bottom: 5px;
     
 }
 .parrafo-like{
