--- a/assets/css/substyles.css/contenedor-post.css
+++ b/assets/css/substyles.css/contenedor-post.css
@@ -1,17 +1,17 @@
 .publicacion{
     margin: auto;
-    margin-top: 50px;
+    margin-top: 100px;
     text-align: center;
     width: 400px;
-    height: 800px;
+    height: auto;
     background-color: white;
+    display: flex;
+    flex-direction: column;
 }
 
 @media(max-width: 768px){
     .publicacion{
         margin-top: 0px;
-        width: 100%;
-
-        
+        width: 100%;   
     }
 }
